# SimpleModDownloader

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  crowdin.yml  log.txt  readme.md  xmake.lua
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: c-cpp.yml  switch.yaml
.xmake/windows/x64/: xmake.conf
forwarder/: Makefile
forwarder/source/: main.cpp
include/: about_tab.hpp  audio_preview.hpp  confirm_page.hpp  constants.hpp  download.hpp  extract.hpp  games_tab.hpp  images_viewer.hpp  install_tab.hpp  main_activity.hpp  main_frame.hpp  mods_list.hpp  progress_event.hpp  settings_tab.hpp  update_tab.hpp  utils.hpp  worker_page.hpp
include/activity/: main_activity.hpp
include/api/: extract.hpp  game.hpp  mod.hpp  net.hpp
include/utils/: config.hpp  progress_event.hpp  utils.hpp
include/views/: download_view.hpp  game_list_tab.hpp  installation_view.hpp  mod_preview.hpp  mods_list.hpp  recycling_grid.hpp  settings_tab.hpp  spinner_image_view.hpp
lib/: CMakeLists.txt
lib/ini/: .gitignore  LICENSE  Makefile  README.md
lib/ini/include/: SimpleIniParser.hpp
port/: xmake.lua
resources/forwarder/: forwarder.nro
resources/i18n/de/: brls.json  hints.json  menu.json
resources/i18n/el/: menu.json
resources/i18n/el-GR/: brls.json  menu.json
resources/i18n/en-US/: brls.json  hints.json  menu.json
resources/i18n/es/: brls.json  hints.json  menu.json
resources/i18n/fr/: brls.json  hints.json  menu.json
resources/i18n/gr/: brls.json  menu.json
resources/i18n/hu/: brls.json  menu.json
resources/i18n/it/: brls.json  hints.json  menu.json
resources/i18n/ja/: brls.json  menu.json
resources/i18n/ko/: brls.json  menu.json
resources/i18n/pt/: menu.json
resources/i18n/pt-BR/: brls.json  menu.json
resources/i18n/ro/: brls.json  menu.json
resources/i18n/tr/: hints.json  menu.json
resources/i18n/vi-VN/: hints.json  menu.json
resources/i18n/zh-CN/: brls.json  menu.json
resources/json/: settings.json
resources/shaders/: fill_vsh.dksh
resources/xml/activity/: main.xml  mods.xml
resources/xml/cells/: cell.xml  cell_no_img.xml  file_cell.xml
source/: about_tab.cpp  audio_preview.cpp  confirm_page.cpp  download.cpp  extract.cpp  game_tab.cpp  games_tab.cpp  images_viewer.cpp  install_tab.cpp  main.cpp  main_activity.cpp  main_frame.cpp  mods_list.cpp  settings_tab.cpp  update_tab.cpp  utils.cpp  worker_page.cpp
source/api/: extract.cpp  game.cpp  mod.cpp  net.cpp
source/utils/: config.cpp  utils.cpp
source/views/: download_view.cpp  game_list_tab.cpp  installation_view.cpp  mod_preview.cpp  mods_list.cpp  recycling_grip.cpp  settings_tab.cpp  spinner_image_view.cpp
toolchain/: check.lua  devkitA64.lua  switch.lua
(+34 files in other folders)
